--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
   box-shadow: 4px 4px 7px gray;
   border-radius: 10px;
   border: 1px solid cyan;
-  background-color: blanchedalmond;
+  background-color: paleturquoise;
 }
 .product-image {
   width: 150px;
